# URIC

./: .purify  MANIFEST  Makefile.PL  NOTES  README  URIC.i  URIC.pm  URIC_wrap.c  test.pl  uri.i  uri.pm  uri_wrap.c  uri_wrap.doc
lib/URI2/: Escape.pm  Heuristic.pm  URL.pm
t/: base.t  heuristic.t  rel-base.t  uri.t
urilib/: Makefile.in  SCHEMES  config.h.in  configure  configure.in  gen_escapes.in  gen_schemes.c  t_uri.c  t_uri.input  t_uri2.input  uri.3  uri.c  uri.h  uri.pm  uri_escape_string.h  uri_escapes.txt  uri_escapes_file.h  uri_escapes_ftp.h  uri_escapes_generic.h  uri_parse.c  uri_parse.h  uri_private.h  uri_scheme_file.c  uri_scheme_finger.c  uri_scheme_ftp.c  uri_scheme_generic.c  uri_scheme_generic.h  uri_scheme_gopher.c  uri_scheme_http.c  uri_scheme_https.c  uri_scheme_mailto.c  uri_scheme_news.c  uri_scheme_news.h  uri_scheme_nntp.c  uri_scheme_prospero.c  uri_scheme_rlogin.c  uri_scheme_snews.c  uri_scheme_telnet.c  uri_scheme_wais.c  uri_schemes.c  (+9 more)
urilib/t/: all.expect  parse_uri.expect  parse_uri_verbatim.expect  run_test.expect  uri_03.expect  uri_fielding_03.expect  uri_fielding_03_strict.expect  uri_fielding_03_verbatim.expect
